--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
 		"bun": ">=1.0.0"
 	},
 	"dependencies": {
+		"@x402/core": "^2.1.0",
+		"@x402/evm": "^2.1.0",
+		"@x402/express": "^2.1.0",
 		"apify": "^3.4.2",
 		"axios": "^1.5.0",
 		"cheerio": "^1.0.0-rc.12",
+		"cors": "^2.8.5",
+		"express": "^5.2.1",
 		"openai": "^6.10.0"
 	},
 	"devDependencies": {
 		"@apify/eslint-config": "^1.0.0",
 		"@apify/tsconfig": "^0.1.1",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.6",
 		"@types/node": "^22.15.32",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.1.5",
@@ -26,6 +33,7 @@
 	},
 	"scripts": {
 		"start": "bun src/main.ts",
+		"serve": "bun src/server.ts",
 		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
 	},
 	"author": "It's not you it's me",
